@startuml Database Schema

!define TABLENAME_COLOR FFFACD
!define PRIMARY_KEY_COLOR FFB6C6
!define FOREIGN_KEY_COLOR B4D7FF
!define INDEX_COLOR C8E6C9

entity "geo_objects" as geo_objects {
  * **id** : BIGSERIAL [PK]
  --
  * **name** : VARCHAR(255)
  * **latitude** : DOUBLE PRECISION [INDEXED]
  * **longitude** : DOUBLE PRECISION [INDEXED]
  **category** : VARCHAR(100) [INDEXED]
  **status** : VARCHAR(50) [INDEXED]
  **city** : VARCHAR(100) [INDEXED]
  address : TEXT
  description : TEXT
  **created_at** : TIMESTAMP
  **updated_at** : TIMESTAMP
}

note right of geo_objects
  **Основная таблица для хранения географических объектов**
  
  **Индексы:**
  - PRIMARY KEY (id)
  - INDEX ON category
  - INDEX ON status
  - INDEX ON city
  - INDEX ON name (для полнотекстового поиска)
  - COMPOSITE INDEX (category, status)
  - COMPOSITE INDEX (city, category)
  - SPATIAL INDEX (latitude, longitude) - опционально для PostGIS
  
  **Примеры значений:**
  - category: 'office', 'store', 'restaurant', 'hotel'
  - status: 'active', 'inactive', 'archived'
  - city: 'Москва', 'Новосибирск', 'СПб'
end note

entity "categories_reference" as categories_ref {
  * **id** : BIGSERIAL [PK]
  --
  * **name** : VARCHAR(100) [UNIQUE]
  description : TEXT
  icon : VARCHAR(255)
  color : VARCHAR(7)
  created_at : TIMESTAMP
}

entity "statuses_reference" as statuses_ref {
  * **id** : BIGSERIAL [PK]
  --
  * **name** : VARCHAR(50) [UNIQUE]
  description : TEXT
  created_at : TIMESTAMP
}

entity "cities_reference" as cities_ref {
  * **id** : BIGSERIAL [PK]
  --
  * **name** : VARCHAR(100) [UNIQUE]
  region : VARCHAR(100)
  country : VARCHAR(100)
  latitude : DOUBLE PRECISION
  longitude : DOUBLE PRECISION
  created_at : TIMESTAMP
}

geo_objects ||--o{ categories_ref : "имеет"
geo_objects ||--o{ statuses_ref : "имеет"
geo_objects ||--o{ cities_ref : "размещен в"

note left of categories_ref
  **Справочник категорий**
  Используется для фильтрации и валидации
end note

note left of statuses_ref
  **Справочник статусов**
  Классификация состояния объектов
end note

note left of cities_ref
  **Справочник городов**
  Хранит координаты центра города
  для центрирования карты
end note

